--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Input number"
-        android:inputType="number"/>
+        android:inputType="text"/>
     <TextView
         android:id="@+id/tv_result"
         android:textStyle="bold"
@@ -50,30 +50,35 @@
             android:orientation="horizontal"
             android:weightSum="5">
             <Button
+            android:id="@+id/btn1"
             android:text="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
             <Button
+            android:id="@+id/btn2"
             android:text="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
             <Button
+                android:id="@+id/btn3"
                 android:text="3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
+                android:id="@+id/btncong"
                 android:text="+"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
-            android:text="C"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+                android:id="@+id/btnclear"
+                android:text="C"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
         </LinearLayout>
         <LinearLayout
@@ -82,26 +87,31 @@
             android:orientation="horizontal"
             android:weightSum="5">
             <Button
+                android:id="@+id/btn4"
                 android:text="4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
+                android:id="@+id/btn5"
                 android:text="5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
+                android:id="@+id/btn6"
                 android:text="6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
+                android:id="@+id/btntru"
                 android:text="-"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
+                android:id="@+id/btnclearall"
                 android:text="AC"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -129,21 +139,25 @@
                     android:orientation="horizontal"
                     android:weightSum="4">
                     <Button
+                        android:id="@+id/btn7"
                         android:text="7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
                     <Button
+                        android:id="@+id/btn8"
                         android:text="8"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
                     <Button
+                        android:id="@+id/btn9"
                         android:text="9"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
                     <Button
+                        android:id="@+id/btnnhan"
                         android:text="*"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -156,6 +170,7 @@
                     android:orientation="horizontal"
                     android:weightSum="2">
                     <Button
+                        android:id="@+id/btn0"
                         android:text="0"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -165,12 +180,14 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1">
                     <Button
+                        android:id="@+id/btnpoint"
                         android:text=","
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         />
                     <Button
+                        android:id="@+id/btnchia"
                         android:text="/"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -181,6 +198,7 @@
 
             </LinearLayout>
             <Button
+                android:id="@+id/btnresult"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_weight="8"
