--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
     android:layout_height="wrap_content">
     <EditText
         android:id="@+id/edt_input"
+        android:lines="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Input number"
@@ -29,7 +30,6 @@
     <TextView
         android:id="@+id/tv_result"
         android:textStyle="bold"
-        android:text="140"
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,24 +52,28 @@
             <Button
             android:id="@+id/btn1"
             android:text="1"
+            android:onClick="onClickNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
             <Button
             android:id="@+id/btn2"
             android:text="2"
+            android:onClick="onClickNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
             <Button
                 android:id="@+id/btn3"
                 android:text="3"
+                android:onClick="onClickNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
                 android:id="@+id/btncong"
                 android:text="+"
+                android:onClick="onClickOperator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
@@ -89,30 +93,35 @@
             <Button
                 android:id="@+id/btn4"
                 android:text="4"
+                android:onClick="onClickNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
                 android:id="@+id/btn5"
                 android:text="5"
+                android:onClick="onClickNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
                 android:id="@+id/btn6"
                 android:text="6"
+                android:onClick="onClickNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
                 android:id="@+id/btntru"
                 android:text="-"
+                android:onClick="onClickOperator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
             <Button
                 android:id="@+id/btnclearall"
                 android:text="AC"
+                android:onClick="onClearButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
@@ -141,23 +150,27 @@
                     <Button
                         android:id="@+id/btn7"
                         android:text="7"
+                        android:onClick="onClickNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
                     <Button
                         android:id="@+id/btn8"
                         android:text="8"
+                        android:onClick="onClickNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1" />
                     <Button
                         android:id="@+id/btn9"
                         android:text="9"
+                        android:onClick="onClickNumber"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
                     <Button
                         android:id="@+id/btnnhan"
+                        android:onClick="onClickOperator"
                         android:text="*"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -172,9 +185,11 @@
                     <Button
                         android:id="@+id/btn0"
                         android:text="0"
+                        android:onClick="onClickNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -189,6 +204,7 @@
                     <Button
                         android:id="@+id/btnchia"
                         android:text="/"
+                        android:onClick="onClickOperator"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"/>
@@ -202,6 +218,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_weight="8"
+                android:onClick="equalresult"
                 android:text="=">
             </Button>
 
